<resources>
    <string name="app_name">Auto Market</string>

    <!-- Navigation -->
    <string name="nav_search">Search</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_browse">Browse</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- StartupActivity -->
    <string name="startup_button_login">Login</string>
    <string name="startup_button_register">Register</string>

    <!-- ViewAdvertFragment -->
    <string name="viewadvert_button_call">Call</string>
    <string name="viewadvert_button_email">Email</string>
    <string name="viewadvert_button_website">Website</string>

    <!-- RegisterFragment -->
    <string name="register_edittext_email">Email</string>
    <string name="register_edittext_password">Password</string>
    <string name="register_edittext_website">Website</string>
    <string name="register_edittext_location">Location</string>
    <string name="register_edittext_name">Name</string>
    <string name="register_edittext_description">Description</string>
    <string name="register_edittext_phonenumber">Phone Number</string>
    <string name="register_button_register">Register</string>

    <!-- LoginFragment -->
    <string name="login_edittext_email">Email</string>
    <string name="login_edittext_password">Password</string>
    <string name="login_button_login">Login</string>

    <!-- PostAdvertFragment -->
    <string name="postadvert_edittext_vehiclereg">Vehicle Registration</string>
    <string name="postadvert_edittext_description">Description</string>
    <string name="postadvert_edittext_price">Price</string>
    <string name="postadvert_button_postadvert">Post Advert</string>
    <string name="title_activity_maps">Map</string>

    <!-- SellerFragment -->
    <string name="seller_button_call">Call</string>
    <string name="seller_button_email">Email</string>
    <string name="seller_button_route">Get Route</string>
    <string name="seller_button_website">Website</string>
</resources>
