<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_browse"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_browse"/>

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_search"/>

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_profile"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_logout"/>
    </group>
</menu>